# novaops

./: README.md  next.config.mjs  next.config.ts  package.json  postcss.config.js  pyproject.toml  tailwind.config.js  tailwind.config.ts  tsconfig.json
.github/workflows/: ci.yml
.vercel/: project.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/components/: ActivityLog.tsx  AgentTopology.tsx  CommandTerminal.tsx  IncidentTimeline.tsx  MetricsPanel.tsx  StatusHeader.tsx
backend/: pyproject.toml
backend/novaops/: __init__.py  config.py  models.py
backend/novaops/agents/: __init__.py
components/: AgentPanel.tsx  Dashboard.tsx  DemoControls.tsx  DemoMode.tsx  Header.tsx  HealthFactorChart.tsx  IncidentTimeline.tsx  MetricsDashboard.tsx  PhaseProgress.tsx  PositionCard.tsx  RebalanceModal.tsx
config/: wagmi.ts
frontend/: README.md  package.json  tailwind.config.ts  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentGraph.tsx  AgentStatus.tsx  CommandInput.tsx  IncidentFeed.tsx  MetricsChart.tsx  ServiceHealth.tsx
hooks/: useDemo.ts
lib/: demo-data.ts  demo-engine.ts  types.ts  use-demo.ts  utils.ts
src/app/: globals.css  layout.tsx  page.tsx
src/components/: AgentPanel.tsx  DemoControls.tsx  Header.tsx  IncidentTimeline.tsx  MetricsDashboard.tsx
src/data/: scenario.ts
src/hooks/: useDemo.ts
src/lib/: demo-data.ts  types.ts
src/novaops/: __init__.py  cli.py
src/novaops/agents/: __init__.py  analyst.py  commander.py  dashboard.py  monitor.py  (+1 more)
tests/: test_commander.py  test_phase2.py
(+9 files in other folders)
